Added support for existing resource filters

--- a/templates/find-config-rules.html
+++ b/templates/find-config-rules.html
@@ -21,7 +21,7 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>Hold down the Control key to select multiple Tag Groups from the list, below.</td>
+                                <td>Hold down the Control key to select up to 6 Tag Groups from the list, below.</td>
                             </tr>
                         </tbody>
                     </table>
