--- a/templates/edit-tag-group.html
+++ b/templates/edit-tag-group.html
@@ -52,7 +52,7 @@
             <span style="font-size:200%;color:MediumSeaGreen;"><input type="text" class="form-control" id="new-tag-group-name" name="new_tag_group_name" value="{{ selected_tag_group_name }}"></span>
             <br>
             <span style="font-size:200%;"><label for="new-tag-group-key-name">Please enter this new Tag Group's tag key:</label></span>
-            <span style="font-size:200%;color:MediumSeaGreen;"><input type="text" class="form-control" id="new-tag-group-key-name" name="new_tag_group_key_name"></span>
+            <span style="font-size:200%;color:MediumSeaGreen;"><input type="text" class="form-control" id="new-tag-group-key-name" name="new_tag_group_key_name" value="{{ selected_tag_group_name }}"></span>
             <br>
             <p style="font-size:150%;">Please select from these found tag values from resource type you selected to update this Tag Group's range of possible tag values</p>
             <br>        
