Dynamic route updates & tag keys getter

--- a/templates/actions.html
+++ b/templates/actions.html
@@ -36,7 +36,8 @@
     </div>
     <br />
     <div class="container">
-      <form method="get" action="{{ url_for('select_resource_type') }}">
+      <form method="post" action="{{ url_for('select_resource_type') }}">
+        <input type="hidden" name="next_route" value="tag_resources" />
         <button type="submit" class="btn btn-primary btn-lg">
           Tag your existing AWS resources using your Tag Groups
         </button>
@@ -44,7 +45,8 @@
     </div>
     <br />
     <div class="container">
-      <form method="get" action="{{ url_for('tag_filter') }}">
+      <form method="post" action="{{ url_for('select_resource_type') }}">
+        <input type="hidden" name="next_route" value="tag_filter" />
         <button type="submit" class="btn btn-primary btn-lg">
           Click to see the tag filter prototype
         </button>
