Fix tag key search & adjust search UI layout

--- a/templates/search-tag-resources-container.html
+++ b/templates/search-tag-resources-container.html
@@ -23,8 +23,8 @@
         <div class="embed-responsive embed-responsive-16by9">
           <iframe
             class="embed-responsive-item"
-            src="{{ url_for('tag_based_search') }}"
-            style="border: none; height: 250px; width: 100%"
+            src="{{ url_for('tag_based_search', resource_type=resource_type) }}"
+            style="border: none; height: 275px; width: 100%"
             name="tag_search_top_iframe"
           ></iframe>
         </div>
