Update tag search iframe alignment & tag search kwargs

--- a/templates/tag-search.html
+++ b/templates/tag-search.html
@@ -54,8 +54,8 @@
         <div class="col-4">
           <div class="form-group">
             <select class="custom-select" id="FormControlSelect3" name="conjunction">
-              <option value="">AND</option>
-              <option value="">OR</option>
+              <option value="AND">AND</option>
+              <option value="OR">OR</option>
             </select>
           </div>
         </div>
