--- a/templates/tag-resources.html
+++ b/templates/tag-resources.html
@@ -36,7 +36,10 @@
                                     </div>
                             <p>Once you select your resources & tags, click the "Tag Selected Resources" button, below.</p>
                             <br>
-                            <br>
+                            <div class="text-center">
+                            <input type="hidden" name="resource_type" value="{{ resource_type }}">
+                            <button type="submit" class="btn btn-primary btn-lg">Tag Selected Resources</button>
+                            </div>
                     </div>
                     <div class="col-5">
                         <h3 style="text-align:center;">Select your tags to apply</h3>
@@ -58,9 +61,7 @@
                         </div>
                         {% endfor %}
                     </div>
-                            <input type="hidden" name="resource_type" value="{{ resource_type }}">
-                            <button type="submit" class="btn btn-primary btn-lg">Tag Selected Resources</button>
-                        </form>
+                    </form>
                 </div>
             </div>  
         <br>
