--- a/templates/tag-resources.html
+++ b/templates/tag-resources.html
@@ -66,7 +66,7 @@
             </div>  
         <br>
         <span style="text-align:center;">
-            <form method="get" action="{{ url_for('actions') }}">
+            <form method="get" action="{{ url_for('actions') }}" target="home_iframe">
                 <button type="submit" class="btn btn-primary btn-lg">Home</button>
                 <button type="submit" class="btn btn-outline-primary btn-lg">Cancel</button>
             </form>
