--- a/templates/type-to-tag-group.html
+++ b/templates/type-to-tag-group.html
@@ -24,6 +24,10 @@
                     <label class="form-check-label" for="ec2Radio">EC2 Instances</label>
             </div>
             <div class="form-check">
+                <input class="form-check-input" type="radio" id="lambdaRadio" value="lambda" name="resource_type">
+                    <label class="form-check-label" for="lambdaRadio">Lambda Functions</label>
+            </div>
+            <div class="form-check">
                 <input class="form-check-input" type="radio" id="bucketRadio" value="s3" name="resource_type">
                     <label class="form-check-label" for="bucketRadio">S3 Buckets</label>
             </div>
