Created class to get/set Lambda tags

--- a/templates/select-resource-type.html
+++ b/templates/select-resource-type.html
@@ -49,6 +49,16 @@
           <input
             class="form-check-input"
             type="radio"
+            id="lambdaRadio"
+            value="lambda"
+            name="resource_type"
+          />
+          <label class="form-check-label" for="ec2Radio">Lambda Functions</label>
+        </div>
+        <div class="form-check">
+          <input
+            class="form-check-input"
+            type="radio"
             id="bucketRadio"
             value="s3"
             name="resource_type"
