--- a/source/code/templates/search-tag-resources-container.html
+++ b/source/code/templates/search-tag-resources-container.html
@@ -32,7 +32,7 @@ SPDX-License-Identifier: MIT-0 -->
         <div class="embed-responsive"> -->
           <iframe
             class="embed-responsive-item"
-            src="{{ url_for('tag_resources') }}"
+            src=""
             style="position: absolute; border: none; top: 321px; height: 100%; width: 100%"
             name="tag_apply_bottom_iframe"
           ></iframe>
