--- a/source/code/templates/find-tags.html
+++ b/source/code/templates/find-tags.html
@@ -34,7 +34,7 @@ SPDX-License-Identifier: MIT-0 -->
             name="resource_type"
             checked
           />
-          <label class="form-check-label" for="ebsRadio">EBS Volumes</label>
+          <label class="form-check-label" for="ebsRadio">Amazon EBS Volumes</label>
         </div>
         <div class="form-check">
           <input
@@ -44,7 +44,17 @@ SPDX-License-Identifier: MIT-0 -->
             value="ec2"
             name="resource_type"
           />
-          <label class="form-check-label" for="ec2Radio">EC2 Instances</label>
+          <label class="form-check-label" for="ec2Radio">Amazon EC2 Instances</label>
+        </div>
+        <div class="form-check">
+          <input
+            class="form-check-input"
+            type="radio"
+            id="eksRadio"
+            value="eks"
+            name="resource_type"
+          />
+          <label class="form-check-label" for="eksRadio">Amazon EKS Clusters</label>
         </div>
         <div class="form-check">
           <input
@@ -54,7 +64,7 @@ SPDX-License-Identifier: MIT-0 -->
             value="lambda"
             name="resource_type"
           />
-          <label class="form-check-label" for="lambdaRadio">Lambda Functions</label>
+          <label class="form-check-label" for="lambdaRadio">AWS Lambda Functions</label>
         </div>
         <div class="form-check">
           <input
@@ -64,7 +74,7 @@ SPDX-License-Identifier: MIT-0 -->
             value="s3"
             name="resource_type"
           />
-          <label class="form-check-label" for="bucketRadio">S3 Buckets</label>
+          <label class="form-check-label" for="bucketRadio">Amazon S3 Buckets</label>
         </div>
         <button type="submit" class="btn btn-primary btn-lg">Find Tags</button>
       </form>
