--- a/source/code/templates/tag-search.html
+++ b/source/code/templates/tag-search.html
@@ -40,7 +40,7 @@ SPDX-License-Identifier: MIT-0 -->
         <div class="col-3"></div>
         <div class="col-3">
           <h4 style="text-align: center"> Tag key</h4>
-          <form method="post" action="{{ url_for('tag_resources') }}" target="tag_apply_bottom_iframe">
+          <form method="post" action="{{ url_for(destination_route) }}" target="tag_bottom_iframe">
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
             <input type="hidden" name="resource_type" value="{{ resource_type }}" />
           <div class="form-group">
