--- a/source/code/templates/select-resource-type.html
+++ b/source/code/templates/select-resource-type.html
@@ -78,7 +78,7 @@ SPDX-License-Identifier: MIT-0 -->
           <label class="form-check-label" for="bucketRadio">Amazon S3 Buckets</label>
         </div>
         <button type="submit" class="btn btn-primary btn-lg">
-          Tag Resources
+          Select
         </button>
       </form>
     </div>
