Add support for managing tags on RDS clusters

--- a/source/code/templates/select-resource-type.html
+++ b/source/code/templates/select-resource-type.html
@@ -71,6 +71,16 @@ SPDX-License-Identifier: MIT-0 -->
           <input
             class="form-check-input"
             type="radio"
+            id="rdsRadio"
+            value="rds"
+            name="resource_type"
+          />
+          <label class="form-check-label" for="rdsRadio">Amazon RDS Clusters</label>
+        </div>
+        <div class="form-check">
+          <input
+            class="form-check-input"
+            type="radio"
             id="bucketRadio"
             value="s3"
             name="resource_type"
