--- a/source/code/templates/type-to-tag-group.html
+++ b/source/code/templates/type-to-tag-group.html
@@ -27,11 +27,15 @@ SPDX-License-Identifier: MIT-0 -->
             </div>
             <div class="form-check">
                 <input class="form-check-input" type="radio" id="eksRadio" value="eks" name="resource_type">
-                    <label class="form-check-label" for="ec2Radio">Amazon EKS Clusters</label>
+                    <label class="form-check-label" for="eksRadio">Amazon EKS Clusters</label>
             </div>
             <div class="form-check">
                 <input class="form-check-input" type="radio" id="lambdaRadio" value="lambda" name="resource_type">
                     <label class="form-check-label" for="lambdaRadio">AWS Lambda Functions</label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" id="rdsRadio" value="rds" name="resource_type">
+                    <label class="form-check-label" for="rdsRadio">Amazon RDS Clusters</label>
             </div>
             <div class="form-check">
                 <input class="form-check-input" type="radio" id="bucketRadio" value="s3" name="resource_type">
