Implemented multi-region retagging

--- a/source/code/templates/found-tags.html
+++ b/source/code/templates/found-tags.html
@@ -51,7 +51,7 @@ SPDX-License-Identifier: MIT-0 -->
             <th scope="col">Resource ID</th>
             <th scope="col">Found Tags</th>
           </thead>
-          <td>{{ region }} {{ instance }}</td>
+          <td>{{ region }} -- {{ instance }}</td>
           <td>
             <table
               style="width: 600px"
