--- a/source/code/templates/tag-resources.html
+++ b/source/code/templates/tag-resources.html
@@ -34,8 +34,8 @@ SPDX-License-Identifier: MIT-0 -->
                                                 <tbody>
                                             {% for id_name in resource_inventory %}
                                                 <tr>
-                                                        <td><input class="form-check-input" type="checkbox" id="{{ region }},resources_to_tag" name="{{ region }},resources_to_tag" value="{{ region }},{{ id_name[0] }}">
-                                                        <label class="form-check-label" for="{{ region }},resources_to_tag">{{ id_name[1] }}  --  {{ id_name[0] }}</label></td>
+                                                        <td><input class="form-check-input" type="checkbox" id="{{ region }},{{ id_name[0] }}" name="resource,{{ region }},{{ id_name[0] }}" value="{{ id_name[0] }}">
+                                                        <label class="form-check-label" for="{{ region }},{{ id_name[0] }}">{{ id_name[1] }}  --  {{ id_name[0] }}</label></td>
                                                 </tr>
                                             {% endfor %}
                                                 </tbody>
