--- a/source/code/templates/found-tags.html
+++ b/source/code/templates/found-tags.html
@@ -44,36 +44,38 @@ SPDX-License-Identifier: MIT-0 -->
       </tbody>
     </table>
     <table style="width: 800px" class="table table-bordered table-striped">
-      {% for region, region_inventory in all_inventory.items() %}
-        {% for instance, tags in region_inventory.items() %}
-        <tr>
-          <thead>
-            <th scope="col">Resource ID</th>
-            <th scope="col">Found Tags</th>
-          </thead>
-          <td>{{ region }} -- {{ instance }}</td>
-          <td>
-            <table
-              style="width: 600px"
-              class="table table-sm table-bordered table-striped"
-            >
-              <thead>
-                <tr>
-                  <th scope="col">Found Tag Key</th>
-                  <th scope="col">Found Tag Value</th>
-                </tr>
-              </thead>
-              <tbody>
-                {% for found_key, found_value in tags.items() %}
-                <tr>
-                  <td>{{ found_key }}</td>
-                  <td>{{ found_value }}</td>
-                </tr>
-                {% endfor %}
-              </tbody>
-            </table>
-          </td>
-        </tr>
+      {% for account_number, per_account_inventory in all_inventory.items() %}
+        {% for region, region_inventory in per_account_inventory.items() %}
+          {% for instance, tags in region_inventory.items() %}
+          <tr>
+            <thead>
+              <th scope="col">Resource ID</th>
+              <th scope="col">Found Tags</th>
+            </thead>
+            <td>{{ account_number }} -- {{ region }} -- {{ instance }}</td>
+            <td>
+              <table
+                style="width: 600px"
+                class="table table-sm table-bordered table-striped"
+              >
+                <thead>
+                  <tr>
+                    <th scope="col">Found Tag Key</th>
+                    <th scope="col">Found Tag Value</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  {% for found_key, found_value in tags.items() %}
+                  <tr>
+                    <td>{{ found_key }}</td>
+                    <td>{{ found_value }}</td>
+                  </tr>
+                  {% endfor %}
+                </tbody>
+              </table>
+            </td>
+          </tr>
+          {% endfor %}
         {% endfor %}
       {% endfor %}
     </table>
