--- a/source/code/templates/tag-resources.html
+++ b/source/code/templates/tag-resources.html
@@ -26,20 +26,30 @@ SPDX-License-Identifier: MIT-0 -->
                         <form method="post" action="{{ url_for('apply_tags_to_resources') }}">  
                             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>          
                                     <div class="form-check">
-                                        {% for region, resource_inventory in all_resource_inventory.items() %}
-                                            <h5 style="text-align:center;">AWS region: <span style="color:MediumSeaGreen;">{{ region }}</span></h5>    
-                                            <p>Resource name -- Resource ID</p>
-                                            <table class="table table-sm table-bordered table-hover">
-                                                <tbody>
-                                            {% for id_name in resource_inventory %}
-                                                <tr>
-                                                        <td><input class="form-check-input" type="checkbox" id="{{ region }},{{ id_name[0] }}" name="resource,{{ region }},{{ id_name[0] }}" value="{{ id_name[0] }}">
-                                                        <label class="form-check-label" for="{{ region }},{{ id_name[0] }}">{{ id_name[1] }}  --  {{ id_name[0] }}</label></td>
-                                                </tr>
+                                        {% for account_number, per_account_inventory in all_resource_inventory.items() %}
+                                            {% for region, resource_inventory in per_account_inventory.items() %}
+                                                <h5 style="text-align:center;">AWS account: <span style="color:MediumSeaGreen;">{{ account_number }}</span></h5>    
+                                                <table class="table table-sm table-bordered table-hover">
+                                                    <tbody>
+                                                        <thead>
+                                                            <th scope="col">Tag?</th>
+                                                            <th scope="col">Region</th>
+                                                            <th scope="col">Resource name</th>
+                                                            <th scope="col">Resource ID</th>
+                                                        </thead>
+                                                        {% for id_name in resource_inventory %}
+                                                            <tr>
+                                                                    <td><input class="form-check-input" type="checkbox" id="{{ region }},{{ id_name[0] }}" name="resource,{{ region }},{{ id_name[0] }}" value="{{ id_name[0] }}"></td>
+                                                                    <!-- <label class="form-check-label" for="{{ region }},{{ id_name[0] }}">{{ id_name[1] }}  --  {{ id_name[0] }}</label></td> -->
+                                                                    <td>{{ region }}</td>
+                                                                    <td>{{ id_name[1] }}</td>
+                                                                    <td>{{ id_name[0] }}</td>
+                                                            </tr>
+                                                        {% endfor %}
+                                                    </tbody>
+                                                </table>
+                                                <p></p>
                                             {% endfor %}
-                                                </tbody>
-                                            </table>
-                                            <p></p>
                                         {% endfor %}
                                     </div>
                             <p>Once you select your resources & tags, click the "Tag Selected Resources" button, below.</p>
