--- a/source/code/templates/updated-tags.html
+++ b/source/code/templates/updated-tags.html
@@ -28,35 +28,46 @@ SPDX-License-Identifier: MIT-0 -->
         {% if all_updated_inventory %}
         <h3>Here are your selected resources with updated tags</h3>
         <br>
-        <table style="width:800px" class="table table-bordered table-striped">
-            {% for region, region_inventory in all_updated_inventory.items() %}
+        <table style="width: 800px" class="table table-bordered table-striped">
+            {% for account_number, per_account_inventory in all_updated_inventory.items() %}
+              {% for region, region_inventory in per_account_inventory.items() %}
                 {% for instance, tags in region_inventory.items() %}
-                    <tr>
-                            <thead>
-                            <th scope="col">Resource ID</th>
-                            <th scope="col">Found Tags</th>
-                            </thead>
-                            <td>{{ region }} -- {{ instance }}</td>
-                                <td><table style="width:600px" class="table table-sm table-bordered table-striped">
-                                    <thead>
-                                        <tr>
-                                        <th scope="col">Found Tag Key</th>
-                                        <th scope="col">Found Tag Value</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                    {% for found_key, found_value in tags.items() %}
-                                        <tr>
-                                            <td>{{ found_key }}</td><td>{{ found_value }}</td>
-                                        </tr>
-                                    {% endfor %}
-                                    </tbody>
-                                    </table>
-                                </td>
-                    </tr>
+                <tr>
+                  <thead>
+                    <th scope="col">Account Number</th>
+                    <th scope="col">Region</th>
+                    <th scope="col">Resource ID</th>
+                    <th scope="col">Found Tags</th>
+                  </thead>
+                  <td>{{ account_number }}</td>
+                  <td>{{ region }}</td>
+                  <td>{{ instance }}</td>
+                  <td>
+                    <table
+                      style="width: 600px"
+                      class="table table-sm table-bordered table-striped"
+                    >
+                      <thead>
+                        <tr>
+                          <th scope="col">Found Tag Key</th>
+                          <th scope="col">Found Tag Value</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        {% for found_key, found_value in tags.items() %}
+                        <tr>
+                          <td>{{ found_key }}</td>
+                          <td>{{ found_value }}</td>
+                        </tr>
+                        {% endfor %}
+                      </tbody>
+                    </table>
+                  </td>
+                </tr>
                 {% endfor %}
+              {% endfor %}
             {% endfor %}
-        </table>
+          </table>
         {% endif %}
     
         <div class="container">
