--- a/source/code/templates/updated-config-rules.html
+++ b/source/code/templates/updated-config-rules.html
@@ -26,6 +26,49 @@ SPDX-License-Identifier: MIT-0 -->
         {% endwith %}
         <h3>Here are the updates to your selected AWS Config Rules</h3>
         <br>
+
+        {% for account_number, per_account_inventory in all_resource_inventory.items() %}
+            {% for region, resource_inventory in per_account_inventory.items() %}
+                <h5 style="text-align:center;">AWS account: <span style="color:MediumSeaGreen;">{{ account_number }}</span></h5>    
+                <table style="table-layout:fixed; width:100%;" class="table table-striped table-hover">
+                <colgroup>
+                    <col span="1" style="width:15%">
+                    <col span="1" style="width:35%">
+                    <col span="1" style="width:50%">
+                </colgroup>    
+                    <tbody>
+                        <thead>
+                            <tr>
+                                <th scope="col" style="text-align:center;vertical-align:middle;">Region</th>
+                                <th scope="col" style="text-align:center;vertical-align:middle;">Config Rule Name</th>
+                                <th scope="col" style="text-align:center;vertical-align:middle;">Config Rule Parameters</th>
+                            </tr>
+                        </thead>
+                    <tr>
+                        <td>{{ updated_config_rule.pop('ConfigRuleName') }}</td>
+                        <td><table style="width:600px" class="table table-sm table-bordered table-striped">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">Input Parameter Key</th>
+                                        <th scope="col">Input Parameter Value</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for found_key, found_values in updated_config_rule.items() %}
+                                            {% if 'tag' in found_key %}
+                                                <tr>
+                                                    <td>{{ found_key }}</td><td>{{ found_values }}</td>
+                                                </tr>
+                                            {% endif %}
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </td>
+                    </tr>
+                </table>
+            {% endfor %}
+        {% endfor %}  
+        <br>
         <table style="width:800px" class="table table-bordered table-striped">
                 <tr>
                         <thead>
