--- a/source/code/templates/find-tags.html
+++ b/source/code/templates/find-tags.html
@@ -24,7 +24,7 @@ SPDX-License-Identifier: MIT-0 -->
     <br />
     <div class="container">
       <form method="post" action="{{ url_for('found_tags') }}">
-        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
         <div class="form-check">
           <input
             class="form-check-input"
@@ -32,8 +32,11 @@ SPDX-License-Identifier: MIT-0 -->
             id="rdsRadio"
             value="rds"
             name="resource_type"
+            checked
           />
-          <label class="form-check-label" for="rdsRadio">Amazon Aurora DB Clusters</label>
+          <label class="form-check-label" for="rdsRadio"
+            >Amazon Aurora DB Clusters</label
+          >
         </div>
         <div class="form-check">
           <input
@@ -42,9 +45,10 @@ SPDX-License-Identifier: MIT-0 -->
             id="ebsRadio"
             value="ebs"
             name="resource_type"
-            checked
           />
-          <label class="form-check-label" for="ebsRadio">Amazon EBS Volumes</label>
+          <label class="form-check-label" for="ebsRadio"
+            >Amazon EBS Volumes</label
+          >
         </div>
         <div class="form-check">
           <input
@@ -54,7 +58,9 @@ SPDX-License-Identifier: MIT-0 -->
             value="ec2"
             name="resource_type"
           />
-          <label class="form-check-label" for="ec2Radio">Amazon EC2 Instances</label>
+          <label class="form-check-label" for="ec2Radio"
+            >Amazon EC2 Instances</label
+          >
         </div>
         <div class="form-check">
           <input
@@ -64,27 +70,33 @@ SPDX-License-Identifier: MIT-0 -->
             value="eks"
             name="resource_type"
           />
-          <label class="form-check-label" for="eksRadio">Amazon EKS Clusters</label>
+          <label class="form-check-label" for="eksRadio"
+            >Amazon EKS Clusters</label
+          >
         </div>
         <div class="form-check">
           <input
-          class="form-check-input"
-          type="radio"
-          id="rdsInstancesRadio"
-          value="rdsInstances"
-          name="resource_type"
+            class="form-check-input"
+            type="radio"
+            id="rdsInstancesRadio"
+            value="rdsInstances"
+            name="resource_type"
           />
-          <label class="form-check-label" for="rdsInstancesRadio">Amazon RDS Instances</label>
+          <label class="form-check-label" for="rdsInstancesRadio"
+            >Amazon RDS Instances</label
+          >
         </div>
         <div class="form-check">
           <input
-          class="form-check-input"
-          type="radio"
-          id="bucketRadio"
-          value="s3"
-          name="resource_type"
+            class="form-check-input"
+            type="radio"
+            id="bucketRadio"
+            value="s3"
+            name="resource_type"
           />
-          <label class="form-check-label" for="bucketRadio">Amazon S3 Buckets</label>
+          <label class="form-check-label" for="bucketRadio"
+            >Amazon S3 Buckets</label
+          >
         </div>
         <div class="form-check">
           <input
@@ -94,7 +106,9 @@ SPDX-License-Identifier: MIT-0 -->
             value="lambda"
             name="resource_type"
           />
-          <label class="form-check-label" for="lambdaRadio">AWS Lambda Functions</label>
+          <label class="form-check-label" for="lambdaRadio"
+            >AWS Lambda Functions</label
+          >
         </div>
         <button type="submit" class="btn btn-primary btn-lg">Find Tags</button>
       </form>
